--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
   "titleBar.inactiveBackground": "#eca28d99",
   "titleBar.inactiveForeground": "#15202b99"
  },
- "peacock.color": "#eca28d"
+ "peacock.color": "#eca28d",
+ "cSpell.words": ["abazon"]
 }
