--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abazon-book-search-engine",
+  "name": "book-search-engine",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
